--- a/PsiBarConverter/PsiBarConverter/Views/ItemsPage.xaml
+++ b/PsiBarConverter/PsiBarConverter/Views/ItemsPage.xaml
@@ -6,7 +6,8 @@
              mc:Ignorable="d"
              x:Class="PsiBarConverter.Views.ItemsPage"
              Title="{Binding Title}"
-             x:Name="BrowseItemsPage">
+             x:Name="BrowseItemsPage"
+             Shell.NavBarIsVisible="False">
 
     <ContentPage.ToolbarItems>
         
